fix(user): fix homepage and users page user bio vertically truncated

--- a/src/pages/home/home/HomePage.module.less
+++ b/src/pages/home/home/HomePage.module.less
@@ -20,7 +20,7 @@
   .columnBio > div {
     display: inline-block;
     white-space: normal;
-    height: 15px;
+    height: 19.5px;
     overflow: hidden;
   }
 }
