--- a/src/pages/user/users/UsersPage.module.less
+++ b/src/pages/user/users/UsersPage.module.less
@@ -36,7 +36,7 @@
     > div {
       display: inline-block;
       white-space: normal;
-      height: 15px;
+      height: 19.5px;
       overflow: hidden;
     }
   }
